# fossil

./: .gitignore  Cargo.toml  README.md  README.txt  rustfmt.toml
benchmarks/: octane.toml
examples/gcc/: README.md  analyze.py  analyze_memory.py  analyze_perf.py  analyze_size.py  binary_analysis.toml  compile.toml  execute.toml  memory.toml  perf_compile.toml  project.toml  workload.c
examples/spidermonkey/: octane-benchmark.toml  parse_octane.py  project.toml
figures/: pyproject.toml
figures/src/fossil_figures/: __init__.py  cli.py  io.py  plot.py  style.py  types.py
figures/src/fossil_figures/scripts/: octane_comparison.py  octane_summary.py  octane_timeline.py
src/: analysis.rs  cli.rs  commands.rs  config.rs  entity.rs  environment.rs  error.rs  figure.rs  fossil.rs  git.rs  io.rs  lib.rs  main.rs  manifest.rs  measure.rs  project.rs  record.rs  runner.rs  site.rs  ui.rs  utils.rs  viz.rs
src/analysis/: mod.rs  parser.rs  quantity.rs  script.rs
src/analysis/quantity/: metric.rs  mod.rs  scalar.rs
src/tui/: app.rs  events.rs  list.rs  mod.rs  theme.rs  ui.rs
src/tui/views/: analysis_popup.rs  bury_popup.rs  grid.rs  help.rs  main_view.rs  mod.rs
src/web/: index.html  mod.rs  serve.rs
tests/: bury_tests.rs  config_tests.rs  dig_tests.rs  fossil_tests.rs  init_tests.rs  mod.rs  reset_tests.rs  surface_list_tests.rs  track_tests.rs  utils_tests.rs
