[package]
name = "fossil"
version = "0.1.0"
edition = "2024"

[lib]
name = "fossil"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29.0"
crossterm = "0.28"
diffy = "0.4.2"
similar = "2.7.0"
sled = "0.34.7"
bincode = "2.0.1"
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"

