[package]
name = "fossil"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fossil"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
chrono = "0.4"
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
thiserror = "2.0.18"
