[project]
name = "fossil-figures"
version = "0.1.0"
description = "Figure generation library for fossil benchmarks"
readme = "README.md"
authors = [
    { name = "justinmeimar", email = "meimar@ualberta.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=1.26",
    "seaborn>=0.13",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
fossil-figure = "fossil_figures.cli:main"

[tool.ruff]
line-length = 100
